<resources>
    <string name="app_name">Dokumin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_fellas">Hello Fellas!</string>
    <string name="let_s_login_to_your_account_first">Let’s login to your account first!</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don’t Have an Account ?</string>
    <string name="register_here">Register here</string>
    <string name="register">Register</string>
    <string name="create_an_account_and_start_organizing_your_documents">Create an account and start organizing your documents!</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="dokumin">Dokumin</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="code_just_sent_to_your_email">code just sent to your email</string>
    <string name="verifiy">Verifiy</string>
    <string name="titik">.</string>
    <string name="didn_t_get_the_code">Didn’t get the code?</string>
    <string name="resend_code_in_00_59">Resend code in 00:59</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="document">Document</string>
    <string name="profile">Profile</string>
    <string name="folder">Folder</string>
    <string name="back_icon">Back</string>
    <string name="nama_document">nama document</string>
    <string name="dokumen_terbaru">New Document</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="setting">setting</string>
    <string name="change_password">Change Password</string>
    <string name="logout">logout</string>
    <string name="selamat_datang_di_dokumin">Selamat Datang di Dokumin</string>
    <string name="dokumin_hadir_untuk_membantu_anda_mengorganisir_dokumen_yang_difoto_agar_lebih_rapi_dan_mudah_diakses_tidak_lagi_khawatir_dokumen_tenggelam_di_antara_foto_foto_di_galeri_anda">Dokumin hadir untuk membantu Anda mengorganisir dokumen yang difoto agar lebih rapi dan mudah diakses. Tidak lagi khawatir dokumen tenggelam di antara foto-foto di galeri Anda!</string>
    <string name="organisir_dokumen_dengan_mudah">Organisir Dokumen dengan Mudah</string>
    <string name="dengan_dokumin_anda_bisa_dengan_mudah_mengelompokkan_dan_menyimpan_dokumen_anda_berdasarkan_kategori_sehingga_dokumen_penting_selalu_terjaga_dan_mudah_ditemukan_kapan_saja">Dengan Dokumin, Anda bisa dengan mudah mengelompokkan dan menyimpan dokumen Anda berdasarkan kategori, sehingga dokumen penting selalu terjaga dan mudah ditemukan kapan saja.</string>
    <string name="akses_cepat_tanpa_hambatan">Akses Cepat, Tanpa Hambatan</string>
    <string name="tidak_perlu_lagi_membuang_waktu_mencari_dokumen_dockeeper_memungkinkan_anda_mengakses_dokumen_dengan_cepat_dan_praktis_hanya_dengan_beberapa_klik">Tidak perlu lagi membuang waktu mencari dokumen. DocKeeper memungkinkan Anda mengakses dokumen dengan cepat dan praktis hanya dengan beberapa klik.</string>
    <string name="next">next</string>
    <string name="camera">camera</string>
    <string name="pilih_metode_pengambilan_gambar">Pilih Metode Pengambilan Gambar</string>
    <string name="gallery">gallery</string>
    <string name="image_preview">Image Preview</string>
    <string name="search">Search...</string>
    <string name="dokumen">Dokumen</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="about">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="what_is_dokumin">What is Dokumin ?</string>
    <string name="how_to_use_dokumin">How to use Dokumin ?</string>
    <string name="how_to_scan_qr_code">How to Scan QR code ?</string>
    <string name="how_to_scan_documents">How to scan documents?</string>
    <string name="dokumin_is_a_document_management_app_that_makes_it_easy_for_users_to_organize_store_and_access_various_types_of_documents_efficiently_the_app_not_only_allows_users_to_store_documents_in_different_formats_but_also_features_a_smart_search_system_to_help_find_documents_quickly_additionally_dokumin_comes_with_a_reminder_system_that_notifies_users_when_important_documents_need_to_be_renewed_thanks_to_the_integrated_artificial_intelligence_ai_this_ai_also_enables_users_to_take_a_photo_of_documents_automatically_detect_them_and_categorize_them_into_the_appropriate_folders_making_document_management_more_practical_organized_and_efficient">Dokumin is a document management app that makes it easy for users to organize, store, and access various types of documents efficiently. The app not only allows users to store documents in different formats but also features a smart search system to help find documents quickly. Additionally, Dokumin comes with a reminder system that notifies users when important documents need to be renewed, thanks to the integrated artificial intelligence (AI). This AI also enables users to take a photo of documents, automatically detect them, and categorize them into the appropriate folders, making document management more practical, organized, and efficient.</string>
    <string name="upload_dokument">Upload Dokument</string>
    <string name="upload_document">Upload Document</string>
    <string name="save">Save</string>
    <string name="create_new_folder">Create New Folder</string>
    <string name="folder_name">folder name</string>
    <string name="jumlah_folder">Jumlah Folder</string>
    <string name="jumlah_dokumen">Jumlah Dokumen</string>
</resources>