<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black"
        android:title="@string/title_home" />


    <item
        android:id="@+id/navigation_document"
        android:icon="@drawable/ic_docs_black"
        android:title="@string/document" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_camera_black"
        android:title="@string/camera" />

    <item
        android:id="@+id/navigation_folder"
        android:icon="@drawable/ic_folder_black"
        android:title="@string/folder" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black"
        android:title="@string/profile" />
</menu>
