<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/alice_blue"
    android:layout_marginTop="24dp"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification"
        android:textFontWeight="700"
        android:layout_marginTop="100dp"
        style="@style/TextView.PoppinsNormal32spHeader"/>

    <TextView
        style="@style/TextView.PoppinsNormal22spSubheader"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/code_just_sent_to_your_email" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/otp_verification" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="5"
        android:gravity="center_horizontal">

        <EditText
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="3dp"
            style="@style/EditTextCustomStyle"
            android:hint="@string/titik"
            android:gravity="center"/>

        <EditText
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="3dp"
            style="@style/EditTextCustomStyle"
            android:hint="@string/titik"
            android:gravity="center"
            />

        <EditText
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="3dp"
            style="@style/EditTextCustomStyle"
            android:hint="@string/titik"
            android:gravity="center"/>

        <EditText
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="3dp"
            style="@style/EditTextCustomStyle"
            android:hint="@string/titik"
            android:gravity="center"/>

        <EditText
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="3dp"
            style="@style/EditTextCustomStyle"
            android:hint="@string/titik"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didn_t_get_the_code" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_code_in_00_59"
            android:textColor="@color/ocean_blue"
            android:paddingStart="8dp"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/ocean_blue"
        android:text="@string/verifiy"
        app:cornerRadius="12dp" />

</LinearLayout>
