<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_vertical"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="348dp"
        android:layout_height="276dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:src="@drawable/illus4" />

    <TextView
        style="@style/TextView.PoppinsNormal32spHeader"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/akses_cepat_tanpa_hambatan"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/ocean_blue"
        android:textFontWeight="900" />

    <TextView
        style="@style/TextView.PoppinsNormal22spSubheader"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/tidak_perlu_lagi_membuang_waktu_mencari_dokumen_dockeeper_memungkinkan_anda_mengakses_dokumen_dengan_cepat_dan_praktis_hanya_dengan_beberapa_klik"
        android:textSize="12sp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ocean_blue"
        android:text="@string/next"
        android:layout_marginTop="40dp"
        android:layout_gravity="center" />

</LinearLayout>
