<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.faq.FaqActivity">

    <ImageView
        android:id="@+id/icon_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <!-- About Title -->
    <TextView
        android:id="@+id/tv_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/frequently_asked_questions"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Divider -->
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/icon_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="We're your comprehensive\nsolution for all Dokumin\nquestions and issues."
        android:textSize="26sp"
        android:textColor="@android:color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingVertical="12dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp" />

    <!-- FAQ List -->
    <LinearLayout
        android:id="@+id/faqContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/searchEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp">

        <View
            style="@style/DividerStyle" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_is_dokumin"
            android:fontFamily="@font/poppins_regular"
            android:paddingVertical="12dp"
            android:textSize="16sp"
            android:textColor="@android:color/black" />
        <View
            style="@style/DividerStyle" />

        <View
            style="@style/DividerStyle" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_use_dokumin"
            android:fontFamily="@font/poppins_regular"
            android:paddingVertical="12dp"
            android:textSize="16sp"
            android:textColor="@android:color/black" />
        <View
            style="@style/DividerStyle" />

        <View
            style="@style/DividerStyle" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_scan_qr_code"
            android:fontFamily="@font/poppins_regular"
            android:paddingVertical="12dp"
            android:textSize="16sp"
            android:textColor="@android:color/black" />
        <View
            style="@style/DividerStyle" />

        <View
            style="@style/DividerStyle" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_scan_documents"
            android:fontFamily="@font/poppins_regular"
            android:paddingVertical="12dp"
            android:textSize="16sp"
            android:textColor="@android:color/black" />
        <View
            style="@style/DividerStyle" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
