<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:padding="30dp"
    android:background="@color/white"
    android:backgroundTint="@color/alice_blue"
    android:orientation="vertical"
    tools:context=".ui.document.AddNewDocumentActivity">


    <TextView
        android:id="@+id/tv_dokumen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/upload_document"
        android:textColor="@color/ocean_blue"
        android:textFontWeight="700"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/white"
        android:elevation="4dp"
        android:radius="8dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white">

            <AutoCompleteTextView
                android:id="@+id/auto_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/folder"
                android:inputType="none"
                android:textColorHint="@android:color/darker_gray"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <Button
        app:cornerRadius="12dp"
        android:id="@+id/btnSelectDocument"
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/alice_blue"
        android:textColor="@color/ocean_blue"
        android:layout_height="wrap_content"
        android:text="Select Document" />

    <TextView
        android:id="@+id/tvSelectedDocumet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="No file selected"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmitDocument"
        style="@style/ShapeAppearanceOverlay.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/ocean_blue"
        android:text="@string/save"
        app:cornerRadius="12dp" />

</LinearLayout>
