<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAccessibility="no"
    tools:context=".ui.profile.ProfileFragment"
    android:background="@color/alice_blue"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <ImageView
        android:id="@+id/avatarImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="152dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="120dp" />

    <TextView
        android:id="@+id/userName"
        style="@style/TextView.PoppinsNormal22spSubheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="start"
        android:text="@string/nama_pengguna"
        android:textColor="#333333"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/avatarImage"
        app:layout_constraintTop_toBottomOf="@id/avatarImage" />

    <!-- Garis pemisah atas untuk setting menu -->
    <View
        style="@style/DividerStyle"
        app:layout_constraintTop_toBottomOf="@id/userName"
        android:layout_marginTop="16dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_marginHorizontal="12dp"
        android:id="@+id/settingMenu"
        style="@style/MenuItemStyle"
        app:layout_constraintTop_toBottomOf="@id/userName"
        android:layout_marginTop="32dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:src="@drawable/ic_faq"
            style="@style/MenuIconStyle" />

        <TextView
            android:id="@+id/settingText"
            android:text="@string/frequently_asked_questions"
            style="@style/MenuTextStyle" />
    </LinearLayout>

    <!-- Garis pemisah bawah untuk setting menu -->
    <View
        style="@style/DividerStyle"
        app:layout_constraintTop_toBottomOf="@id/settingMenu"
        android:layout_marginTop="8dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_marginHorizontal="12dp"
        android:id="@+id/changeLayoutMenu"
        style="@style/MenuItemStyle"
        app:layout_constraintTop_toBottomOf="@id/settingMenu"
        android:layout_marginTop="8dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:src="@drawable/ic_info"
            style="@style/MenuIconStyle" />

        <TextView
            android:id="@+id/changeLayoutText"
            style="@style/MenuTextStyle"
            android:text="@string/about" />
    </LinearLayout>

    <!-- Garis pemisah bawah untuk change layout menu -->
    <View
        style="@style/DividerStyle"
        app:layout_constraintTop_toBottomOf="@id/changeLayoutMenu"
        android:layout_marginTop="8dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_marginHorizontal="12dp"
        android:id="@+id/logoutMenu"
        style="@style/MenuItemStyle"
        app:layout_constraintTop_toBottomOf="@id/changeLayoutMenu"
        android:layout_marginTop="8dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:src="@drawable/ic_call"
            style="@style/MenuIconStyle" />

        <TextView
            android:id="@+id/logoutText"
            android:text="@string/contact_us"
            style="@style/MenuTextStyle" />
    </LinearLayout>

    <!-- Garis pemisah bawah untuk logout menu -->
    <View
        style="@style/DividerStyle"
        app:layout_constraintTop_toBottomOf="@id/logoutMenu"
        android:layout_marginTop="8dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/ocean_blue"
        app:icon="@drawable/ic_logout"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        android:gravity="center"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/logoutMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
